Improve responsive design, set fixed aspect ratio for product images, fix styling bugs on smaller screens

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,7 +39,7 @@ body {
 }
 
 .product-card {
-    height: 275px !important;
+    min-height: 275px !important;
 }
 
 .section {
